fixed overlap in checkbox section

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -192,7 +192,7 @@ code {
   margin-bottom: 5px;
 }
 
-.radio-options input[type="radio"] {
+/* .radio-options input[type="radio"] {
   opacity: 0;
   position: fixed;
   width: 0;
@@ -222,18 +222,48 @@ code {
 .radio-options label:hover {
   background-color: #285943;
   cursor: pointer;
+} */
+
+
+.radio-options:checked + .radio-text,
+.radio-options:focus + .radio-text {
+  color: #fdf0f6;
+}
+
+.radio-options:checked + .radio-text::before {
+  background-color: #771144;
+  border: 3px solid #fdf0f6;
+  content: '';
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  z-index: -1; 
+}
+
+.radio-options:focus + .radio-text::before {
+  background-color: #771144;
+  content: '';
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  z-index: -1;
+  outline: 4px solid #fdf0f6;
 }
 
 /* checkboxes section */
 
 .stack {
-  height: 60px;
+  height: auto;
   width: 80%;
   text-align: left;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 35px;
+  grid-column-gap: 20px;
   grid-row-gap: 25px;
   margin: 0 auto;
 }
